--- a/app.json
+++ b/app.json
@@ -1,10 +1,8 @@
 {
   "pages": [
-    
     "pages/index/index",
     "pages/test/test",
     "pages/result/result",
-    "pages/logs/logs",
     "pages/introduction/intr1",
     "pages/introduction/intr2",
     "pages/introduction/intr3",
@@ -39,5 +37,6 @@
         "text": "我的人格"
       }
     ]
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
